--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page {
+  background-color: #0C2543;
+  height: calc(100vh - 50px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +9,70 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav {
+  background: #091627;
+  height: 50px;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navlink {
+  color: #808080;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+  cursor: pointer;
+  &.active {
+      color: #ffffff;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.navmenu {
+  display: flex;
+  align-items: center;
+}
+
+.navtitle {
+  color: #ffffff;
+  display: flex;
+  height: 100%;
+  padding: 0 1.5rem;
+  background-color: #000000;
+  align-self: center;
+  align-items: center;
+  text-decoration: none;
+  font-size: x-large;
+  font-weight: bolder;
+}
+
+.card, .card.selected {
+  border-radius: 30px;
+  background-color: #06336a;
+  height: 150px;
+  transform: scale(1); 
+  border-style: solid;
+  border-color: #fefefe;
+  border-width: 2;
+  text-align: center;
+  &:hover {
+    transform: scale(1.03); 
   }
+}
+.card.selected {
+  border-color: #ff0000;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 7px; 
+  padding: 25px;
+  height: calc(100% - 50px);
+  width: calc(100% - 50px);
+  
+}
+
+.info {
+  font-size: 12pt;
 }
