--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,21 @@
 .info {
   font-size: 12pt;
 }
+
+.input {
+  border-radius: 25px;
+  padding-left: 5px;
+  margin-right: 10px;
+  height: 30px;
+  text-align: center;
+}
+
+.formContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.timerContainer {
+  height: 70px;
+}
